# scrnsv

./: .gitignore  CMakeLists.txt  main.cpp  overlay.cpp  overlay.h  overlaywidget.cpp  overlaywidget.h  screenshot.cpp  screenshot.h  trayicon.cpp  trayicon.h
.github/workflows/: build.yml
